--- a/css/GeneralStyle.css
+++ b/css/GeneralStyle.css
@@ -6,15 +6,14 @@ body {
  
 }
 
-/*-------Container-------*/ 
+/*-------Container-------*/
+/*--PC--*/
 .container {
-    margin-right: 20%;
-    margin-left: 20%;
+    margin-right: 15%;
+    margin-left: 15%;
     padding-left: 0px;
     padding-right: 0px; 
 }
-
-
 
 /*----Option Bar-----*/
 
@@ -24,16 +23,17 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    
-
+    padding-left: 15%;
+    padding-right: 15%;
+    background-color: #333333;
 }
+
 
 .optionBar ul {
     list-style-type: none;
     margin: 0;
-    padding-left: 20%;
     overflow: hidden;
-    background-color: #333333;
+    padding: 0;
 }
 
 .optionBar li {
@@ -94,10 +94,6 @@ p {
     
 }
 
-
-
-
-
 .contact ul {
     list-style-type: none;
     margin: 0;
@@ -117,6 +113,33 @@ p {
     padding: 16px;
     text-decoration: none;
 }
+
+/*---Cell Phone ---*/
+/*- Para evitar la deformacion usaremos parametros diferentes en funcion del dispositivo que use la web*/
+@media (max-width:426px) {
+    
+    .container {
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+    .optionBar {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    p {
+    
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width:376px) {
+    h1 {
+        margin-top: 120px;
+    }
+
+}
+
 
 
 
