--- a/css/GeneralStyle.css
+++ b/css/GeneralStyle.css
@@ -61,65 +61,6 @@ header a:hover{
     font-weight: bold;
 }
 
-/*-------Ttitle -------*/
-#showcase {
-    
-    background: url(/resources/showcase.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 300px;
-    
-    color: aliceblue;
-    text-align: center;
-}
-#showcase h1 {
-    font-size: 30px;
-    margin-top: 100px;
-    
-}
-
-/*----Contacte -----*/
-
-#contact {
-    background-color: #333333;
-    text-align: center;
-    padding: 5px;
-}
-
-#contact ul {
-    list-style-type: none;
-    margin: 0;
-    overflow: hidden;
-    padding: 0;
-    display: inline-block;
-}
-
-#contact li{
-    float:left;
-}
-
-#contact li a {
-    text-align: center;
-    padding: 6px 15px 6px 15px;
-    display: inline-block;
-}
-#contact img {
-    width: 60px;
-    margin: 0;
-    padding: 0;
-    
-}
-
-/*---Intro ---*/
-#intro {
-    background-color: whitesmoke;
-    text-align: center;
-    padding: 2% 20%;
-}
-
-#intro p {
-    color: black; 
-}
 
 /*---Footer ---*/
 
@@ -135,6 +76,38 @@ footer p {
     
 }
 
+/*----Contacte -----*/
+
+.contact {
+    background-color:#333333;
+    text-align: center;
+    padding: 5px;
+}
+
+.contact ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    display: inline-block;
+}
+
+.contact li{
+    float:left;
+}
+
+.contact li a {
+    text-align: center;
+    padding: 6px 15px 6px 15px;
+    display: inline-block;
+}
+.contact img {
+    width: 60px;
+    margin: 0;
+    padding: 0;
+    
+}
+
 
 
 /*---Cell Phone ---*/
@@ -143,16 +116,6 @@ footer p {
     
     .container {
         width: 95%;
-    }
-
-    #intro {
-        padding: 2%; 
-    }
-}
-
-@media (max-width:376px) {
-    h1 {
-        margin-top: 120px;
     }
 
 }
