--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -19,7 +19,7 @@
 
 /*---Intro ---*/
 #intro {
-    background-color: greenyellow;
+    background-color: whitesmoke;
     text-align: center;
     padding: 2% 20%;
 }
