--- a/css/ColoniesStyle.css
+++ b/css/ColoniesStyle.css
@@ -42,7 +42,7 @@ section ul {
 
 section li {
     float: left;
-    padding: 5px 20px
+    padding: 5px 20px;
 }
 
 #buttons {
@@ -73,6 +73,7 @@ section #grups{
 
 .grup {
     display:none;
+    align-items: center;
 }
 
 .grup img {
@@ -81,6 +82,7 @@ section #grups{
 }
 .grup p {
     display: inline-block;
+    width: 220px;
 }
 
 /*Responsive*/
@@ -89,8 +91,13 @@ section #grups{
     .grup li{
         
         padding: 0;
+        float: none;
         
     }
+    .grup {
+        padding: 0px;
+    }
+    
 
 }
 
