--- a/css/ColoniesStyle.css
+++ b/css/ColoniesStyle.css
@@ -55,12 +55,12 @@ button {
     border: 0;
     padding: 3px 10px;
     color:  white;
+    font-weight: normal;
     
 }
 
 button:hover {
     
-    /*background: green;*/
     font-weight: bold;
     
 }
@@ -72,7 +72,7 @@ section #grups{
 }
 
 .grup {
-    display:none;
+    display:;
     align-items: center;
 }
 
@@ -97,10 +97,12 @@ section #grups{
     .grup {
         padding: 0px;
     }
+    #intro {
+        padding: 2%; 
+    }
     
 
 }
-
 
 
 
