--- a/css/ColoniesStyle.css
+++ b/css/ColoniesStyle.css
@@ -1,3 +1,4 @@
+/*--- SHOWCASE ---*/
 #showcase {
     
     background: url(/resources/showcase_colonies.jpg) no-repeat;
@@ -72,7 +73,7 @@ section #grups{
 }
 
 .grup {
-    display:;
+    display:none;
     align-items: center;
 }
 
