--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -26,6 +26,10 @@
     color: black; 
 }
 
+#instagram {text-align: center;}
+#instagram ul {overflow: hidden; display: inline-block; padding: 0; list-style-type: none;}
+#instagram li {float: left; margin: 0px 10px;}
+
 /*--Responsive WP--*/
 
 @media (max-width:426px) {
@@ -39,5 +43,9 @@
     #showcase h1 {
         margin-top: 120px;
     }
+
+}
+@media (max-width:768px) {
+    #instagram li {float:none;}
 
 }
