--- a/css/IndexStyle.css
+++ b/css/IndexStyle.css
@@ -26,6 +26,7 @@
     color: black; 
 }
 
+/*---Instagram---*/
 #instagram {text-align: center;}
 #instagram ul {overflow: hidden; display: inline-block; padding: 0; list-style-type: none;}
 #instagram li {float: left; margin: 0px 10px;}
