--- a/css/GeneralStyle.css
+++ b/css/GeneralStyle.css
@@ -5,7 +5,16 @@ body {
     font-family: 'Muli', sans-serif;
     padding: 0;
     margin: 0;
+    /*
+    cursor: url("/resources/cursor2.png"), url(foo.cur), default;
+    */
+    
 }
+/*
+a, button{
+    cursor: url("/resources/cursor2_2.png"), url(foo.cur), pointer;
+
+}*/
 
 /*-------Container-------*/
 /*--PC--*/
